--- a/2017-0003 (COD).md
+++ b/2017-0003 (COD).md
@@ -244,29 +244,57 @@ services shall be permitted to process electronic communications metadata only i
 [Directive establishing the European Electronic Communications Code] or
 Regulation (EU) 2015/2120^11 for the duration necessary for that purpose; or
 
-(b) it is necessary for billing, calculating interconnection payments, detecting or
+(b) it is necessary for performance of the contract to which the end-user is party,
+including billing, calculating interconnection payments, detecting or
 stopping fraudulent, or abusive use of, or subscription to, electronic communications
 services; or
 
-(c) the end-user concerned has given his or her consent to the processing of his or her
+(ba) it is necessary for compliance with a legal obligation to which the provider is subject;
+or
+
+(c) the end-user concerned has given consent to the processing of 
 communications metadata for one or more specified purposes, including for the
 provision of services to such end-users, provided that the purpose or
 purposes concerned could not be fulfilled by processing information that is made
-anonymous.
+anonymous; or
+
+(d) it is necessary to protect the vital interest of a natural person where the end-user who
+is a natural person is physically or legally incapable of giving consent; or
+
+(e) it is necessary for scientific research or statistical purposes provided it is based on
+Union or Member State law which shall be proportionate to the aim pursued and
+provide for specific measures, including encryption and pseudonymisation, to
+safeguard fundamental rights and the interest of the end-users. Processing of
+electronic communications metadata under this point shall be done in accordance
+with paragraph 6 of Article 21 and paragraphs 1, 2 and 4 of Article 89 of Regulation
+(EU) 2016/679.
 
 3. Without prejudice to paragraph 1, providers of the electronic communications networks and
     services shall be permitted to process electronic communications content only:
 
 (a) for the sole purpose of the provision of a service to an end-user, if the end-
-user or end-users concerned have given their consent to the processing of his or her
+user or end-users concerned have given their consent to the processing of 
 electronic communications content and the provision of that service cannot be
 fulfilled without the processing of such content; or
 
+(aa) for the purpose of the provision of an explicitly requested services by an end-user for
+purely individual use if the requesting end-user has given consent and where such
+requested processing does not adversely affect fundamental rights and interest of
+another end-user concerned and does not exceed the duration necessary for the
+provision of the requested services and is limited to that purpose only; or
+
 (b) if all end-users concerned have given their consent to the processing of their
 electronic communications content for one or more specified purposes that cannot be
-fulfilled by processing information that is made anonymous, and the provider has
+fulfilled by processing information that is made anonymous, and the provider has prior to the
+processing carried out an assessment of the impact of the envisaged processing
+operations on the protection of electronic communications data and
 consulted the supervisory authority. Article 36(2) and (3) of Regulation
 (EU) 2016/679 shall apply to the consultation of the supervisory authority.
+
+4. A third party on behalf of a provider of electronic communications network or
+services shall be permitted to process electronic communications data in accordance
+with paragraphs 1 to 3 provided that conditions laid down in Article 28 of Regulation
+(EU) 2016/679 are met. 
 
 ```
 Article 7
@@ -278,10 +306,12 @@ Storage and erasure of electronic communications data
     communication content by the intended recipient or recipients. Such data may be
     recorded or stored by the end-users or by a third party entrusted by them to record,
     store or otherwise process such data, in accordance with Regulation (EU) 2016/679.
-2. Without prejudice to point (b) of Article 6(1) and points (a) and (c) of Article 6(2),
+2. Without prejudice to point (b) of Article 6(1) and points (a), (c) and (ce) of Article 6(2),
     the provider of the electronic communications service shall erase electronic
     communications metadata or make that data anonymous when it is no longer needed
-    for the purpose of the transmission of a communication.
+    for the purpose of the transmission of a communication. Such data may be recorded or
+    stored by the end-users or by a third party entrusted by them to record, store or
+    otherwise process such data, in accordance with Regulation (EU) 2016/679.
 3. Where the processing of electronic communications metadata takes place for the
     purpose of billing in accordance with point (b) of Article 6(2), the relevant metadata
     may be kept until the end of the period during which a bill may lawfully be
@@ -309,13 +339,17 @@ user; or
 (d) it is necessary for audience measuring, provided that such measurement is
 carried out by the provider of the information society service requested by the end-
 user or by a third party on behalf of the provider of the information society service 
-provided that conditions laid down in Article 28 of Regulation (EU) 2016/679 are met;
+provided that conditions laid down in Article 28 of Regulation (EU) 2016/679 are met; or
 
-(e) it is necessary for a security update provided that the privacy settings chosen by the
-end-user are not changed in any way, the end-user is informed in advance and is
-given the possibility to postpone or turn off the automatic installation of these
-updates. 
-
+(e) it is necessary for a security update provided that:
+    (i) security updates are necessary and do not in any way change the privacy settings chosen by the
+    end-user are not changed,
+    (ii) the end-user is informed in advance each time an update is being installed, and
+    (iii) the end-user is given the possibility to postpone or turn off the automatic 
+    installation of these updates; or 
+(f) it is necessary to locate, at the time of the incident, a caller of an emergency call from the
+    terminal by organisations dealing with emergency communications. 
+    
 2. The collection of information emitted by terminal equipment of the end-user to enable it to connect
     to another device and, or to network equipment shall be prohibited, except on the
 	following grounds:
